# Lab1

./: .gitignore  CMakeLists.txt  functions.c  functions.h
T1/: main.c
T10/: main.c
T2/: constant_functions.c  constant_functions.h  main.c
T3/: main.c
T4/: main.c
T5/: main.c
T6/: main.c
T7/: main.c
T8/: main.c
T9/: main.c
