cmake_minimum_required(VERSION 3.23)
project(Lab1 C)

set(CMAKE_C_STANDARD 23)

add_executable(Task1 T1/main.c functions.h)
add_executable(Task2 T2/main.c functions.h)
add_executable(Task3 T3/main.c functions.h)
add_executable(Task8 T8/main.c functions.h)
add_executable(Task10 T10/main.c functions.h)
